# DemoPlugin

./: CMakeLists.txt  LICENSE
cmake/: common.cmake  update_qmldir.cmake
modules/Extra/: CMakeLists.txt  stdafx.h
modules/Extra/resources/qml/: ExText.qml  Main.qml
modules/Extra/styles/: ExButtonColor.cpp  ExButtonColor.h  ExColors.cpp  ExColors.h  ExTextStyle.cpp  ExTextStyle.h
resources/qml/: Main.qml
src/: main.cpp
